need to fix overflow-y

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,10 @@ a:visited {
 }
 
 html {
+  font-size: 16px;
+}
+
+html {
   height: 100%;
   width: 100%;
   position: relative;
@@ -42,9 +46,16 @@ html {
 
 
 body {
-  margin: 1em 0em -1em 0em;
+  margin: 16px 0px -16px 0px;
   font-family: "Open Sans";
   color: #484545;
+}
+
+
+html, body, .App {
+  height: 100%;
+  overflow-x: hidden;
+  font-size:100%;
 }
 
 .App {
@@ -52,11 +63,19 @@ body {
   width: 100%;
 }
 
-html, body, .App {
+.App {
+  display: flex;
+  flex-direction: column;
   height: 100%;
-  overflow-x: hidden;
 }
 
+.navbar, .footer {
+  flex-shrink: 0;
+}
+
+.landingPage {
+  flex: 1 0 auto;
+}
 
 .navbar {
   /* background-image: linear-gradient(265deg, #fcb69f, #feada6);
@@ -68,7 +87,7 @@ html, body, .App {
     height: 110%; */
 
   text-align: center;
-padding: 2em 1em 2em 1em;
+  padding: 32px 16px 32px 16px;
   background-color: white;
   font-size: 16px;
   font-weight: 520;
@@ -76,23 +95,23 @@ padding: 2em 1em 2em 1em;
   color: #484545;
   border-bottom: solid #ededed 1px;
 
-  z-index : 50;
+  /* z-index : 50; */
   width: 100%;
-  position: relative;
-  vertical-align: baseline;
+  /* position: relative; */
+  /* vertical-align: baseline; */
 }
 
 .navLink {
-  margin: 0.85em 1.25em;
-  padding: 0.85em 0.75em;
+  margin: 14px 20px;
+  padding: 14px 12px;
   /* color: #f26a6b; */
   color: #7fd1da;
 }
 
 .section-header {
   font-size: 32px;
-  margin: 1em 0em 0.25em 1em;
-  padding: 1em 0.75em;
+  margin: 16px 0px 4px 16px;
+  padding: 16px 12px;
   color: #4FC1CE;
   font-weight: 500;
   text-transform: uppercase;
@@ -100,18 +119,55 @@ padding: 2em 1em 2em 1em;
 
 }
 
+section.footer {
+  display: flex;
+  flex-shrink: 0;
+  align-items: flex-end;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-self: center;
+  bottom: 0;
+
+  /* right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 16px;
+  height: 80px;
+  margin: -16px;
+  z-index: 0;
+   */
+  /* background-color: #e1e0d8; */
+  /* background: #ededed; */
+
+
+  /* background-color: #f7f7f7;
+  width: 100%;
+  text-align: center;
+  vertical-align: baseline; */
+}
+
+.footer-content {
+
+  justify-content: center;
+
+  /* align-items: center; */
+  align-content: center;
+
+}
+
 
 .landingPage {
-  height: 100%;
+  /* min-height: 100%; */
   background-image: url('images/closed-computer-spiky-plant.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
+  /* position: relative; */
   width: 100%;
   display:flex;
   wrap:nowrap;
   align-items: center;
+  flex: 1 0 auto;
 }
 
 .landingPageContent {
@@ -120,8 +176,9 @@ padding: 2em 1em 2em 1em;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  align-content: space-around;
+  align-content: center;
   width: 53%
+
 }
 
 .section-1, .section-2 {
@@ -129,16 +186,27 @@ padding: 2em 1em 2em 1em;
 }
 
 .myName {
-  margin: -5em 1em 0em 1em;
-  padding: 0em 1em 0em 1em;
+  margin: 16px 16px 0px 16px;
+  padding: 0px 16px 0px 16px;
   align-self: center;
-  font-size: 36px;
+  font-size: 42px;
   font-weight: 500;
   wrap: nowrap;
   text-transform: uppercase;
   letter-spacing: 2px;
   align-self: center;
+}
 
+.myHeadline {
+  font-size: 32px;
+  /* align-items: center; */
+  margin: 16px 16px 32px 16px;
+  padding: 0px 16px 32px 16px;
+  text-transform: uppercase;
+  height: 100%;
+  /* display: flex; */
+  letter-spacing: 2px;
+  /* justify-content: center; */
   /* transform: skew(60deg); */
 }
 
@@ -147,8 +215,8 @@ padding: 2em 1em 2em 1em;
 .portfolio: {
   height: 100%;
   width: 100%;
-  padding: 1em;
-  margin: 1em;
+  padding: 16px;
+  margin: 16px;
 }
 
 .screenshotOpp {
@@ -163,7 +231,7 @@ padding: 2em 1em 2em 1em;
 img.proj-screenshots {
   /* max-width: 550px;
   min-width: 450px; */
-  margin: 1em;
+  margin: 16px;
   width: 90%;
   /* flex: auto; */
   /* flex-shrink: 1; */
@@ -183,21 +251,21 @@ img.proj-screenshots {
   display: flex;
   /* flex-direction: row; */
   flex-wrap: nowrap;
-  /* margin: 1em; */
+  /* margin: 16px; */
   justify-content: center;
 
   /* flex: auto; */
 }
 
 .captureContent {
-  padding: 2em;
-  margin: 0em 0em 1em 0em;
+  padding: 32px;
+  margin: 0px 0px 16px 0px;
 }
 
 .captureContent, .newswireContent {
   background: #00A5B7b5;
   color: #f7f7f7;
-  /* margin: 1em 0em; */
+  /* margin: 16px 0px; */
   padding: 60px;
 }
 
@@ -223,7 +291,7 @@ img.proj-screenshots {
 .project-title, .project-titleOpp {
   /* flex-grow: 6; */
   text-transform: uppercase;
-  padding: 0.25em 0;
+  padding: 4px 0;
   font-size: 20px;
   font-weight: 550;
 }
@@ -234,8 +302,8 @@ img.proj-screenshots {
 }
 
 .links a, .linksOpp a {
-  padding: 1em 1em 1em 1em;
-  margin: 1em 1em 1em 1em;
+  padding: 16px 16px 16px 16px;
+  margin: 16px 16px 16px 16px;
   font-size: 13.5px;
 }
 
@@ -245,7 +313,7 @@ img.proj-screenshots {
 
 .links, .linksOpp {
   text-align: center;
-  padding: 1em;
+  padding: 16px;
   text-transform: uppercase;
 }
 
@@ -274,8 +342,8 @@ img.proj-screenshots {
   flex-shrink: 1; */
   /* min-width: 550px; */
   width: 48%;
-  margin: 1em 1.5em;
-  padding: 1em 1.5em;
+  margin: 16px 24px;
+  padding: 16px 24px;
   align-self: center;
   font-size: 16px;
 
@@ -285,8 +353,8 @@ img.proj-screenshots {
 
 .blog-posts {
   background: #ececec;
-  padding: 1em;
-  margin: 0em;
+  padding: 16px;
+  margin: 0px;
   display: flex;
   flex-wrap: wrap;
   align-content: center;
@@ -299,8 +367,8 @@ img.proj-screenshots {
 
 .post {
   background: white;
-  margin: 1.2em;
-  padding: 1.1em;
+  margin: 32px;
+  padding: 16px;
   width: 27%;
   height: 275px;
   border-radius: 6px;
@@ -312,7 +380,7 @@ div .blogPostImg {
   /* padding: 8px 8px; */
   border-radius: 6px;
   /* max-width: 100%;
-  margin: -1em; */
+  margin: -16px; */
   align-items: center;
   justify-content: center;
   overflow: hidden;
@@ -330,57 +398,32 @@ img.blogPostImg {
 }
 
 .blogPostTitle {
-  font-size: 1.2em;
+  font-size: 1.32px;
   font-weight: 600;
-  padding: 0.5em;
+  padding: 8px;
 }
 
 .blogPostDate {
-  padding: 0.5em;
+  padding: 8px;
 }
 
 .blogPostTopic {
   font-style: italic;
-  padding: 0.5em;
+  padding: 8px;
 }
 
 
 
 
 
-section.footer {
-  /* right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 1em;
-  height: 80px;
-  margin: -1em;
-  z-index: 0;
-   */
-  /* background-color: #e1e0d8; */
-  /* background: #ededed; */
 
-
-  /* background-color: #f7f7f7;
-  width: 100%;
-  text-align: center;
-  vertical-align: baseline; */
-}
-
-.footer-content {
-  display: flex;
-  justify-content: center;
-  /* align-items: center; */
-  align-content: center;
-
-}
 
 .social-icons {
   display: inline-flex;
   flex-wrap: nowrap;
   justify-content: center;
-  padding: 1em 0em;
-  margin: 1em 0em;
+  padding: 16px 0px;
+  margin: 16px 0px;
 }
 
 /*
